修复半程票余票显示问题
问题：用户查询特定路段时，前端始终显示全程路线，导致测试失败
修复：前端根据用户查询的起始站和终点站显示对应的路线信息
结果：所有13个UI测试场景全部通过

修复的文件：
- frontend/src/views/train/Index.vue: 修复handleQuery方法中的路线显示逻辑

测试结果：
13 Scenarios (13 passed)
76 Steps (76 passed)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>